# Selaco

./: .gitattributes  CMakeLists.txt  README.osx.md  build_osx.sh
libraries/lzma/: CMakeLists.txt
soundfont/: gzdoom.sf2
src/: CMakeLists.txt  d_main.cpp  gitinfo.h  m_misc.cpp
src/common/platform/posix/osx/: i_specialpaths.mm
src/common/platform/posix/sdl/: i_joystick.cpp  i_joystick.h
src/common/rendering/gl/: gl_framebuffer.cpp  gl_hwtexture.cpp  gl_hwtexture.h
src/common/rendering/vulkan/system/: vk_device.h  vk_framebuffer.cpp  vk_renderdevice.cpp
src/common/rendering/vulkan/textures/: vk_hwtexture.cpp  vk_hwtexture.h
src/common/textures/: image.cpp  image.h
src/common/textures/formats/: ddstexture.cpp
src/common/utility/: engineerrors.cpp  i_time.cpp  i_time.h
src/posix/osx/: selaco.icns  selaco.plist
tools/lemon/: CMakeLists.txt
tools/re2c/: CMakeLists.txt
tools/scripts/: build_dxt_wad.py  package_selaco_osx.py  requirements.txt
tools/zipdir/: CMakeLists.txt
wadsrc/static/shaders/glsl/: main.fp
